# ASCOGU26

./: .env.example  .gitignore  config.yaml  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
api/: main.py
api/routes/: abstracts.py  authors.py  briefs.py  filters.py  metrics.py  tweets.py
dashboard/: app.py  components.py  sidebar_filters.py
dashboard/pages/: 01_hoje.py  02_Feed.py  02_feed.py  03_temas.py  04_Autores.py  04_autores.py  05_Metricas.py  05_metricas.py  06_Abstracts.py  06_abstracts.py
dashboard/pages_old/: 01_volume.py  02_top_posts.py  03_top_authors.py  04_threads.py  05_topics.py  06_daily_brief.py
data/: abstracts_raw.json  ascogu26.db
fixtures/: sample_response.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AbstractCard.tsx  AuthorCard.tsx  (+7 more)
scripts/: aggregate.py  collect.py  collect_since_last.py  download_media.py  export_data.py  export_json.py  generate_brief.py  generate_kol_summaries.py  import_abstracts.py
src/: abstract_aggregator.py  abstract_classifier.py  abstract_fetcher.py  aggregator.py  clinical_filters.py  collector.py  config.py  db.py  export.py  kol_summarizer.py  linker.py  media_downloader.py  query_builder.py  relevance.py  summarizer.py  topic_model.py
tests/: conftest.py  test_abstract_aggregator.py  test_abstract_classifier.py  test_aggregator.py  test_clinical_filters.py  test_collector.py  test_db.py  test_linker.py  test_query_builder.py  test_relevance.py  test_topic_model.py
(+25 files in other folders)
